# mini_lcd

./: .gitmodules  Button.cpp  Button.h  CMakeLists.txt  CircleDeq.cpp  CircleDeq.h  Comm.cpp  Comm.h  Encoder.cpp  Encoder.h  PerfGraph.cpp  PerfGraph.h  README.md  Settings.h  Snake.cpp  Snake.h  System.cpp  System.h  TCP.cpp  Utils.cpp  Utils.h  ino_compat.h  lwipopts.h  main.cpp
Components/: Button.cpp  Button.h  Encoder.cpp  Encoder.h
Functions/: Menu.cpp  Menu.h  PerfGraph.cpp  PerfGraph.h  Snake.cpp  Snake.h  Tetris.cpp  Tetris.h
Utils/: Comm.cpp  Comm.h  Logger.cpp  Logger.h  TCP.cpp  TCP.h
hagl/: CHANGELOG.md  CMakeLists.txt  Display.cpp  README.md  fonts.cpp  hagl.cpp  hagl_bitmap.cpp  hagl_blit.cpp  hagl_char.cpp  hagl_circle.cpp  hagl_clip.cpp  hagl_color.cpp  hagl_ellipse.cpp  hagl_hline.cpp  hagl_image.cpp  hagl_line.cpp  hagl_pixel.cpp  hagl_polygon.cpp  hagl_rectangle.cpp  hagl_triangle.cpp  hagl_vline.cpp  mipi_display.cpp
hagl/include/: Display.h  aps.h  fonts.h  fontx.h  fps.h  hagl.h  hagl_hal.h  hagl_hal_color.h  hsl.h  mipi_dcs.h  mipi_display.h  rgb332.h  rgb565.h  rgb888.h
hagl/include/hagl/: backend.h  bitmap.h  blit.h  char.h  circle.h  clip.h  color.h  ellipse.h  hline.h  image.h  line.h  pixel.h  polygon.h  rectangle.h  triangle.h  vline.h  window.h
hagl/src/: hagl.cpp  hagl_blit.cpp  hagl_char.cpp  hagl_circle.cpp  hagl_clip.cpp  hagl_color.cpp  hagl_ellipse.cpp  hagl_hline.cpp  hagl_image.cpp  hagl_line.cpp  hagl_pixel.cpp  hagl_polygon.cpp  hagl_rectangle.cpp  hagl_triangle.cpp  hagl_vline.cpp
hagl_hal/: CMakeLists.txt  hagl_hal_single.cpp  mipi_display.cpp
hagl_hal/include/: hagl_hal.h  mipi_display.h
